--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.profiles.active=dev
 spring.datasource.url=jdbc:mysql://localhost:3306/toDoManager
 spring.datasource.username=root
 spring.datasource.password=my-secret-pw
@@ -5,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=true
+
