--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=dev
 spring.datasource.url=jdbc:mysql://localhost:3306/toDoManager
 spring.datasource.username=root
 spring.datasource.password=my-secret-pw
