--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-#spring.profiles.active=dev
 spring.datasource.url=jdbc:mysql://localhost:3306/toDoManager
 spring.datasource.username=root
 spring.datasource.password=my-secret-pw
@@ -6,4 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.application.name=ToDoManager
+app.version=ToDoManager-v0.1
+
 
