--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.mail.host=smtp.wp.pl
 spring.mail.port=465
-spring.mail.username=jatez123@wp.pl
-spring.mail.password=dupa123
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.ssl.enable=true
